Minor changes from lint